# libversion-sys

./: .gitmodules  Cargo.toml  LICENSE  README.md  build.rs  wrapper.h
.github/workflows/: ci.yml
scripts/: generate-headers.sh
src/: lib.rs
