[package]
name = "libversion-sys"
version = "0.2.0"
edition = "2024"
links = "version"
build = "build.rs"
description = "FFI bindings to libversion, an advanced version string comparison library"
license = "MIT"
repository = "https://github.com/DUpdateSystem/libversion-sys"
homepage = "https://github.com/DUpdateSystem/libversion-sys"
documentation = "https://docs.rs/libversion-sys"
exclude = [".github/", ".gitignore", ".gitmodules", "scripts/"]

[build-dependencies]
cc = "1"
bindgen = "0.72"
